overflow fixed

--- a/src/styles/components/_autoCarousel2.scss
+++ b/src/styles/components/_autoCarousel2.scss
@@ -5,7 +5,7 @@
 }
 
 .wrapper {
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
